# lynk

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  linkedin-system-kickoff.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_import_records.py  0003_outreach_schema.py  0004_phase3_smart.py
backend/scripts/: seed_templates.py
backend/src/lynk/: config.py  db.py  main.py
backend/src/lynk/api/: deps.py
backend/src/lynk/models/: __init__.py  company.py  email_candidate.py  follow_up.py  inbound_event.py  message.py  note.py  person.py  tag.py  template.py
backend/src/lynk/schemas/: company.py  email_finder.py  follow_up.py  imports.py  inbound.py  message.py  note.py  person.py  tag.py  template.py
backend/src/lynk/services/: claude_client.py  csv_import.py  dedup.py  email_finder.py  email_verifier.py  inbound_classifier.py  inbound_handler.py  inbound_poller.py  pattern_learner.py  people.py  scheduler.py  smtp_sender.py  template_render.py  tracking.py
backend/tests/: conftest.py  test_claude_client.py  test_csv_import.py  test_dedup.py  test_email_finder_routes.py  test_email_verifier.py  test_imports_routes.py  test_inbound_classifier.py  test_inbound_handler.py  test_inbound_routes.py  test_messages_routes.py  test_pattern_learner.py  test_people_routes.py  test_smtp_sender.py  test_tags_routes.py  test_template_render.py  test_templates_routes.py  test_tracking_routes.py  test_tracking_service.py
backend/tests/fixtures/: sample_csv.py
(+40 files in other folders)
