[project]
name = "lynk"
version = "0.1.0"
description = "LinkedIn outreach and networking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "anthropic>=0.40.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "python-slugify>=8.0.4",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "faker>=40.15.0",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/lynk"]
omit = ["tests/*", "migrations/*"]
